<resources>
    <string name="app_name">Maquetacion 2</string>
    <string name="atope_de_power1">Oh cmon, this is bullshit! I mean look at this dude, alright? He doesnt even know what planet hes living on! You ever, have like a wild animal trapped in your house? Opossum - big, freaky, lookin bitch. Hey, since when did they change it to opossum? Whats up with that? When I was comin up it was just possum. Opossum makes it sound like hes Irish or something. Why do they gotta go changing everything?</string>
    <string name="atope_de_power2">Oh well, Heil Hitler, bitch! And let me tell you something else. So whatre you saying? Like, I shot someone with, like, a gun? We flipped a coin, okay? You and me. You and me! Coin flip is sacred! Your job is waiting for you in that basement, as per the coin!
    </string>
    <string name="atope_de_power3">I took this vo-tech class in high school, woodworking. I took a lot of vo-tech classes, because it was just big jerk-off, but this one time I had this teacher by the name of… Mr… Mr. Pike. I guess he was like a Marine or something before he got old. He was hard hearing. My project for his class was to make this wooden box. You know, like a small, just like a… like a box, you know, to put stuff in. So I wanted to get the thing done as fast as possible.</string>
    <string name="atope_de_power4">I figured I could cut classes for the rest of the semester and he couldnt flunk me as long as I, you know, made the thing. So I finished it in a couple days. And it looked pretty lame, but it worked. You know, for putting in or whatnot. So when I showed it to Mr. Pike for my grade, he looked at it and said: Is that the best you can do? </string>
    <string name="btn_accept">Aceptar</string>
    <string name="radio_button_1">Radio button 1</string>
    <string name="radio_button_2">Radio button 2</string>
    <string name="accept_conditions">Las acepto</string>
    <string name="conditions_read">He leído las condiciones</string>
    <string name="right">Right</string>
    <string name="center">Center</string>
    <string name="left">Left</string>
    <string name="tel_fono">Teléfono</string>
    <string name="email">Email</string>
    <string name="t_tulo_de_la_pantalla">Título de la pantalla</string>
    <string name="gatito_sonriente">Gatito sonriente</string>
    <string name="elige_ciudad">Elige una ciudad</string>
    <string name="segunda_actividad">Segunda Actividad</string>
    <string name="back">Back</string>
    <string name="jesse_pinkman">Jesse Pinkman</string>
    <string-array name="lista_ciudades">
        <item>Jaén</item>
        <item>Granada</item>
        <item>Málaga</item>
        <item>Almería</item>
        <item>Huelva</item>
        <item>Cádiz</item>
        <item>Sevilla</item>
    </string-array>
</resources>